# ncat_automated_forging_clay

./: README.md
src/flexbe_behavior_engine/flexbe_widget/flexbe_widget/: behavior_action_server.py
src/flexbe_kinovagen3/: README.md
src/flexbe_kinovagen3/flexbe_kinovagen3/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/flexbe_kinovagen3/flexbe_kinovagen3_flexbe_behaviors/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/flexbe_kinovagen3/flexbe_kinovagen3_flexbe_behaviors/manifest/: example_action_state_behavior.xml  example_behavior.xml
src/flexbe_kinovagen3/flexbe_kinovagen3_flexbe_states/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
src/flexbe_kinovagen3/flexbe_kinovagen3_flexbe_states/flexbe_kinovagen3_flexbe_states/: move00_read_xyz.py  move0_joint_states.py  move10_marker_cartesian_input_endeffector.py  move11_aruco_launcher.py  move12_marker_xyz_input.py  move13_gripper_state.py  move14_move_each_joints_state.py  move1_to_joint_position_state.py  move2_cartesian_move_state.py  move3_move_xyz.py  move3_move_xyz_rpy_state.py  move4_incremental_xyz_state.py  move6_incremental_rpy_state.py  move7_incremental_xyz_waypoints.py  move8_marker_input_xyz.py  move9_marker_cartesian_input_camera.py
src/flexbe_kinovagen3/flexbe_kinovagen3_flexbe_states/tests/: example_action_state.test  example_state.test  run_colcon_test.py  run_tests.launch.py
src/flexbe_webui/: setup.py
src/flexbe_webui/flexbe_webui/: webui_server.py
src/flexbe_webui/flexbe_webui/io/: code_generator.py  state_parser.py
